Added CSS classes for styling

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,11 +23,12 @@
                 text-align:center;
                 font-weight:normal;
             }
-            p {
+            .bodytext {
                 font-family:Roboto;
                 color:rgb(80,80,80);
                 
             }
+             
             #container {
                 max-width:720px;
                 margin:0 auto;
@@ -45,8 +46,8 @@
             <p class="bodytext">To Do: Show job openings here</p>
             <div style= "text-align:center;">
                 <button>Contact Us</button>
+                <p>Copyright &copy <script>document.write(new Date().getFullYear())</script> Powered by Jaricha All Rights Reserved</p>
             </div>
-            <p>Copyright &copy <script>document.write(new Date().getFullYear())</script> Powered by Jaricha All Rights Reserved</p>
         </div>
     </body>
 </html>
